[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefabs/motoko.tscn" type="PackedScene" id=3]
[ext_resource path="res://nokiafc22.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/game.gd" type="Script" id=5]
[ext_resource path="res://scripts/hud.gd" type="Script" id=6]
[ext_resource path="res://sprites/scenery/StartButtonPressed.png" type="Texture" id=7]
[ext_resource path="res://sprites/scenery/StartButton.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 10
use_mipmaps = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 10
use_mipmaps = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
font_data = ExtResource( 4 )

[node name="game" type="Node2D"]
script = ExtResource( 5 )

[node name="background" parent="." instance=ExtResource( 1 )]

[node name="ground" parent="." instance=ExtResource( 2 )]

[node name="motoko" parent="." instance=ExtResource( 3 )]
position = Vector2( 21, 144 )

[node name="hud" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="score" type="Label" parent="hud"]
visible = false
margin_right = 144.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.580392, 0.156863, 0.65098, 1 )
custom_colors/font_color_shadow = Color( 0.101961, 0.717647, 0.705882, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore" type="Label" parent="hud"]
margin_right = 144.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.580392, 0.156863, 0.65098, 1 )
custom_colors/font_color_shadow = Color( 0.101961, 0.717647, 0.705882, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_highscore" type="Label" parent="hud"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -96.0
margin_right = 72.0
margin_bottom = -53.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.827451, 0, 1, 1 )
custom_colors/font_color_shadow = Color( 0.372549, 0.709804, 0.752941, 1 )
text = "New Highscore"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="hud"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.675
margin_left = -72.0
margin_top = -64.0
margin_right = 72.0
margin_bottom = -41.8
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.827451, 0, 1, 1 )
custom_colors/font_color_shadow = Color( 0.372549, 0.709804, 0.752941, 1 )
text = "Motoko Runner"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="hud"]
wait_time = 2.0
one_shot = true

[node name="Restart" type="Label" parent="hud"]
visible = false
margin_top = 224.0
margin_right = 144.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.580392, 0.156863, 0.65098, 1 )
custom_colors/font_color_shadow = Color( 0.101961, 0.717647, 0.705882, 1 )
text = "Game Over"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="hud"]
margin_left = 8.0
margin_top = 180.0
margin_right = 138.0
margin_bottom = 244.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 64, 32 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="start_game" from="hud" to="." method="new_game"]
[connection signal="timeout" from="hud/MessageTimer" to="hud" method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="hud/Start" to="motoko" method="_on_Start_pressed"]
[connection signal="pressed" from="hud/Start" to="hud" method="_on_Start_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
